Re-generated Makefiles

--- a/tools/Makefile
+++ b/tools/Makefile
@@ -2,6 +2,7 @@ TARGETS	= AppBroker AppClient
 PREFIX	= /usr/local
 DESTDIR	=
 BINDIR	= $(PREFIX)/bin
+SBINDIR	= $(PREFIX)/sbin
 CC	?= cc
 CPPFLAGSF= -I ../include
 CPPFLAGS=
