Using pkg-config to fix compiling in some cases

--- a/src/transport/project.conf
+++ b/src/transport/project.conf
@@ -1,8 +1,9 @@
 targets=tcp,tcp4,tcp6,template,udp,udp4,udp6
 cppflags_force=-I ../../include
 cppflags=
-cflags_force=-W -fPIC
+cflags_force=-W -fPIC `pkg-config --cflags libSystem`
 cflags=-Wall -g -O2 -pedantic
+ldflags_force=`pkg-config --cflags libSystem`
 dist=Makefile
 
 [tcp]
