--- a/src/transport/Makefile
+++ b/src/transport/Makefile
@@ -5,8 +5,9 @@ LIBDIR	= $(PREFIX)/lib
 CC	= cc
 CPPFLAGSF= -I ../../include
 CPPFLAGS=
-CFLAGSF	= -W -fPIC
+CFLAGSF	= -W -fPIC `pkg-config --cflags libSystem`
 CFLAGS	= -Wall -g -O2 -pedantic
+LDFLAGSF= `pkg-config --cflags libSystem`
 AR	= ar
 RANLIB	= ranlib
 CCSHARED= $(CC) -shared
