--- a/tests/project.conf
+++ b/tests/project.conf
@@ -1,4 +1,4 @@
-targets=tests.log,transport
+targets=appmessage,tests.log,transport
 cppflags_force=-I ../include
 cflags_force=-W `pkg-config --cflags libSystem`
 cflags=-Wall -g -O2
@@ -6,10 +6,18 @@ ldflags_force=`pkg-config --libs libSystem` -lApp
 ldflags=-L../src -Wl,-rpath,../src
 dist=Makefile,tests.sh
 
+[appmessage]
+type=binary
+sources=appmessage.c
+ldflags=../src/libApp.a
+
+[appmessage.c]
+depends=../src/libApp.a
+
 [tests.log]
 type=script
 script=./tests.sh
-depends=tests.sh,transport,../src/transport/tcp.c,../src/transport/udp.c
+depends=appmessage,tests.sh,transport,../src/transport/tcp.c,../src/transport/udp.c
 
 [transport]
 type=binary
