--- a/src/transport/project.conf
+++ b/src/transport/project.conf
@@ -4,12 +4,15 @@ cppflags=
 cflags_force=-W -fPIC `pkg-config --cflags libSystem`
 cflags=-Wall -g -O2 -pedantic
 ldflags_force=`pkg-config --cflags libSystem`
-dist=Makefile
+dist=Makefile,common.c
 
 [tcp]
 type=plugin
 sources=tcp.c
 install=$(LIBDIR)/App/transport
+
+[tcp.c]
+depends=common.c
 
 [tcp4]
 type=plugin
@@ -17,7 +20,7 @@ sources=tcp4.c
 install=$(LIBDIR)/App/transport
 
 [tcp4.c]
-depends=tcp.c
+depends=tcp.c,common.c
 
 [tcp6]
 type=plugin
@@ -25,7 +28,7 @@ sources=tcp6.c
 install=$(LIBDIR)/App/transport
 
 [tcp6.c]
-depends=tcp.c
+depends=tcp.c,common.c
 
 [template]
 type=plugin
@@ -36,13 +39,16 @@ type=plugin
 sources=udp.c
 install=$(LIBDIR)/App/transport
 
+[udp.c]
+depends=common.c
+
 [udp4]
 type=plugin
 sources=udp4.c
 install=$(LIBDIR)/App/transport
 
 [udp4.c]
-depends=udp.c
+depends=udp.c,common.c
 
 [udp6]
 type=plugin
@@ -50,4 +56,4 @@ sources=udp6.c
 install=$(LIBDIR)/App/transport
 
 [udp6.c]
-depends=udp.c
+depends=udp.c,common.c
