--- a/src/transport/project.conf
+++ b/src/transport/project.conf
@@ -3,7 +3,7 @@ cppflags_force=-I ../../include
 cppflags=
 cflags_force=-W -fPIC `pkg-config --cflags libSystem`
 cflags=-Wall -g -O2 -pedantic
-ldflags_force=`pkg-config --cflags libSystem`
+ldflags_force=`pkg-config --libs libSystem`
 dist=Makefile,common.c
 
 [tcp]
