--- a/src/transport/Makefile
+++ b/src/transport/Makefile
@@ -7,7 +7,7 @@ CPPFLAGSF= -I ../../include
 CPPFLAGS=
 CFLAGSF	= -W -fPIC `pkg-config --cflags libSystem`
 CFLAGS	= -Wall -g -O2 -pedantic
-LDFLAGSF= `pkg-config --libs libSystem`
+LDFLAGSF= `pkg-config --libs libSystem` -L.. -lApp
 AR	= ar
 RANLIB	= ranlib
 CCSHARED= $(CC) -shared
