--- a/src/project.conf
+++ b/src/project.conf
@@ -5,7 +5,7 @@ cflags_force=-W -fPIC `pkg-config --cflags libSystem`
 cflags=-Wall -g -O2 -pedantic
 ldflags_force=`pkg-config --libs libSystem`
 ldflags=
-dist=Makefile,appinterface.h,apptransport.h,common.h
+dist=Makefile,appinterface.h,appmessage.h,apptransport.h,common.h
 
 [libApp]
 type=library
@@ -18,6 +18,9 @@ depends=appinterface.h,../include/App/appclient.h,common.h
 
 [appinterface.c]
 depends=../include/App/appserver.h,../config.h
+
+[appmessage.c]
+depends=../include/App/appmessage.h,appmessage.h
 
 [apptransport.c]
 depends=../include/App/appmessage.h,../config.h
