--- a/tests/project.conf
+++ b/tests/project.conf
@@ -1,4 +1,4 @@
-targets=appmessage,tests.log,transport
+targets=appmessage,appserver,tests.log,transport
 cppflags_force=-I ../include
 cflags_force=-W `pkg-config --cflags libSystem`
 cflags=-Wall -g -O2
@@ -14,10 +14,18 @@ ldflags=../src/libApp.a
 [appmessage.c]
 depends=../src/libApp.a
 
+[appserver]
+type=binary
+sources=appserver.c
+ldflags=../src/libApp.a
+
+[appserver.c]
+depends=../src/libApp.a
+
 [tests.log]
 type=script
 script=./tests.sh
-depends=appmessage,tests.sh,transport,../src/transport/tcp.c,../src/transport/udp.c
+depends=appmessage,appserver,tests.sh,transport,../src/transport/tcp.c,../src/transport/udp.c
 
 [transport]
 type=binary
