Also reworked the AppClient class (to use AppTransport)

--- a/src/project.conf
+++ b/src/project.conf
@@ -5,16 +5,16 @@ cflags_force=-W -fPIC `pkg-config --cflags libSystem`
 cflags=-Wall -g -O2 -pedantic
 ldflags_force=`pkg-config --libs libSystem`
 ldflags=
-dist=Makefile,appinterface.h,appmessage.h,apptransport.h,common.h
+dist=Makefile,appinterface.h,appmessage.h,apptransport.h,common.c,common.h
 
 [libApp]
 type=library
-sources=appclient.c,appinterface.c,appmessage.c,appserver.c,apptransport.c,common.c
+sources=appclient.c,appinterface.c,appmessage.c,appserver.c,apptransport.c
 ldflags=-lsocket -lws2_32
 install=$(LIBDIR)
 
 [appclient.c]
-depends=appinterface.h,../include/App/appclient.h,common.h
+depends=appinterface.h,../include/App/appclient.h,common.h,common.c
 
 [appinterface.c]
 depends=../include/App/appserver.h,../config.h
@@ -26,7 +26,7 @@ depends=../include/App/appmessage.h,appmessage.h
 depends=../include/App/appmessage.h,../config.h
 
 [appserver.c]
-depends=appinterface.h,../include/App/appserver.h,../config.h
+depends=appinterface.h,../include/App/appserver.h,common.h,common.c,../config.h
 
 [apptransport.c]
 depends=apptransport.h,../include/App/apptransport.h,../config.h
