--- a/tests/Makefile
+++ b/tests/Makefile
@@ -1,4 +1,4 @@
-TARGETS	= appmessage appserver tests.log transport
+TARGETS	= appclient appmessage appserver tests.log transport
 PREFIX	= /usr/local
 DESTDIR	=
 BINDIR	= $(PREFIX)/bin
@@ -18,6 +18,13 @@ INSTALL	= install
 
 all: $(TARGETS)
 
+appclient_OBJS = appclient.o
+appclient_CFLAGS = $(CPPFLAGSF) $(CPPFLAGS) $(CFLAGSF) $(CFLAGS)
+appclient_LDFLAGS = $(LDFLAGSF) $(LDFLAGS) ../src/libApp.a
+
+appclient: $(appclient_OBJS)
+	$(CC) -o appclient $(appclient_OBJS) $(appclient_LDFLAGS)
+
 appmessage_OBJS = appmessage.o
 appmessage_CFLAGS = $(CPPFLAGSF) $(CPPFLAGS) $(CFLAGSF) $(CFLAGS)
 appmessage_LDFLAGS = $(LDFLAGSF) $(LDFLAGS) ../src/libApp.a
@@ -32,7 +39,7 @@ appserver_LDFLAGS = $(LDFLAGSF) $(LDFLAGS) ../src/libApp.a
 appserver: $(appserver_OBJS)
 	$(CC) -o appserver $(appserver_OBJS) $(appserver_LDFLAGS)
 
-tests.log: appmessage appserver tests.sh transport ../src/transport/tcp.c ../src/transport/udp.c
+tests.log: appclient appmessage appserver tests.sh transport ../src/transport/tcp.c ../src/transport/udp.c
 	./tests.sh -P "$(PREFIX)" -- "tests.log"
 
 transport_OBJS = transport.o
@@ -41,6 +48,9 @@ transport_LDFLAGS = $(LDFLAGSF) $(LDFLAGS)
 
 transport: $(transport_OBJS)
 	$(CC) -o transport $(transport_OBJS) $(transport_LDFLAGS)
+
+appclient.o: appclient.c ../src/libApp.a
+	$(CC) $(appclient_CFLAGS) -c appclient.c
 
 appmessage.o: appmessage.c ../src/libApp.a
 	$(CC) $(appmessage_CFLAGS) -c appmessage.c
@@ -52,7 +62,7 @@ transport.o: transport.c ../src/libApp.a
 	$(CC) $(transport_CFLAGS) -c transport.c
 
 clean:
-	$(RM) -- $(appmessage_OBJS) $(appserver_OBJS) $(tests.log_OBJS) $(transport_OBJS)
+	$(RM) -- $(appclient_OBJS) $(appmessage_OBJS) $(appserver_OBJS) $(tests.log_OBJS) $(transport_OBJS)
 
 distclean: clean
 	$(RM) -- $(TARGETS)
