--- a/tests/project.conf
+++ b/tests/project.conf
@@ -1,10 +1,18 @@
-targets=appmessage,appserver,tests.log,transport
+targets=appclient,appmessage,appserver,tests.log,transport
 cppflags_force=-I ../include
 cflags_force=-W `pkg-config --cflags libSystem`
 cflags=-Wall -g -O2
 ldflags_force=`pkg-config --libs libSystem` -lApp
 ldflags=-L../src -Wl,-rpath,../src
 dist=Makefile,tests.sh
+
+[appclient]
+type=binary
+sources=appclient.c
+ldflags=../src/libApp.a
+
+[appclient.c]
+depends=../src/libApp.a
 
 [appmessage]
 type=binary
@@ -25,7 +33,7 @@ depends=../src/libApp.a
 [tests.log]
 type=script
 script=./tests.sh
-depends=appmessage,appserver,tests.sh,transport,../src/transport/tcp.c,../src/transport/udp.c
+depends=appclient,appmessage,appserver,tests.sh,transport,../src/transport/tcp.c,../src/transport/udp.c
 
 [transport]
 type=binary
