--- a/src/Makefile
+++ b/src/Makefile
@@ -20,7 +20,7 @@ INSTALL	= install
 
 all: $(TARGETS)
 
-libApp_OBJS = appclient.o appinterface.o appmessage.o appserver.o apptransport.o common.o
+libApp_OBJS = appclient.o appinterface.o appmessage.o appserver.o apptransport.o
 libApp_CFLAGS = $(CPPFLAGSF) $(CPPFLAGS) $(CFLAGSF) $(CFLAGS)
 libApp_LDFLAGS = $(LDFLAGSF) $(LDFLAGS)  
 
@@ -33,7 +33,7 @@ libApp.so.0.0 libApp.so.0 libApp.so: $(libApp_OBJS)
 	$(LN) -s -- libApp.so.0.0 libApp.so.0
 	$(LN) -s -- libApp.so.0.0 libApp.so
 
-appclient.o: appclient.c appinterface.h ../include/App/appclient.h common.h
+appclient.o: appclient.c appinterface.h ../include/App/appclient.h common.h common.c
 	$(CC) $(libApp_CFLAGS) -c appclient.c
 
 appinterface.o: appinterface.c ../include/App/appserver.h ../config.h
@@ -42,14 +42,11 @@ appinterface.o: appinterface.c ../include/App/appserver.h ../config.h
 appmessage.o: appmessage.c ../include/App/appmessage.h appmessage.h
 	$(CC) $(libApp_CFLAGS) -c appmessage.c
 
-appserver.o: appserver.c appinterface.h ../include/App/appserver.h ../config.h
+appserver.o: appserver.c appinterface.h ../include/App/appserver.h common.h common.c ../config.h
 	$(CC) $(libApp_CFLAGS) -c appserver.c
 
 apptransport.o: apptransport.c apptransport.h ../include/App/apptransport.h ../config.h
 	$(CC) $(libApp_CFLAGS) -c apptransport.c
-
-common.o: common.c
-	$(CC) $(libApp_CFLAGS) -c common.c
 
 clean:
 	$(RM) -- $(libApp_OBJS)
