--- a/tests/project.conf
+++ b/tests/project.conf
@@ -1,4 +1,4 @@
-targets=appclient,appmessage,appserver,tests.log,transport
+targets=appclient,appmessage,appserver,lookup,tests.log,transport
 cppflags_force=-I ../include
 cflags_force=-W `pkg-config --cflags libSystem`
 cflags=-Wall -g -O2
@@ -30,10 +30,17 @@ ldflags=../src/libApp.a
 [appserver.c]
 depends=../src/libApp.a
 
+[lookup]
+type=binary
+sources=lookup.c
+
+[lookup.c]
+depends=../src/lookup.h,../src/lookup.c
+
 [tests.log]
 type=script
 script=./tests.sh
-depends=appclient,appmessage,appserver,tests.sh,transport,../src/transport/tcp.c,../src/transport/udp.c
+depends=appclient,appmessage,appserver,lookup,tests.sh,transport,../src/transport/tcp.c,../src/transport/udp.c
 
 [transport]
 type=binary
