Moved the lookup code to the AppTransport class

--- a/src/project.conf
+++ b/src/project.conf
@@ -5,7 +5,7 @@ cflags_force=-W -fPIC `pkg-config --cflags libSystem`
 cflags=-Wall -g -O2 -pedantic
 ldflags_force=`pkg-config --libs libSystem`
 ldflags=
-dist=Makefile,appinterface.h,appmessage.h,apptransport.h,lookup.c,lookup.h
+dist=Makefile,appinterface.h,appmessage.h,apptransport.h
 
 [libApp]
 type=library
@@ -14,7 +14,7 @@ ldflags=-lsocket -lws2_32
 install=$(LIBDIR)
 
 [appclient.c]
-depends=appinterface.h,../include/App/appclient.h,lookup.h,lookup.c
+depends=appinterface.h,../include/App/appclient.h
 
 [appinterface.c]
 depends=../include/App/appserver.h,../config.h
@@ -26,7 +26,7 @@ depends=../include/App/appmessage.h,appmessage.h
 depends=../include/App/appmessage.h,../config.h
 
 [appserver.c]
-depends=appinterface.h,../include/App/appserver.h,lookup.h,lookup.c,../config.h
+depends=appinterface.h,../include/App/appserver.h,../config.h
 
 [apptransport.c]
 depends=apptransport.h,../include/App/apptransport.h,../config.h
