--- a/tests/project.conf
+++ b/tests/project.conf
@@ -35,7 +35,7 @@ type=binary
 sources=lookup.c
 
 [lookup.c]
-depends=../src/lookup.h,../src/lookup.c
+depends=../src/apptransport.h
 
 [tests.log]
 type=script
