--- a/src/Makefile
+++ b/src/Makefile
@@ -33,7 +33,7 @@ libApp.so.0.0 libApp.so.0 libApp.so: $(libApp_OBJS)
 	$(LN) -s -- libApp.so.0.0 libApp.so.0
 	$(LN) -s -- libApp.so.0.0 libApp.so
 
-appclient.o: appclient.c appinterface.h ../include/App/appclient.h lookup.h lookup.c
+appclient.o: appclient.c appinterface.h ../include/App/appclient.h
 	$(CC) $(libApp_CFLAGS) -c appclient.c
 
 appinterface.o: appinterface.c ../include/App/appserver.h ../config.h
@@ -42,7 +42,7 @@ appinterface.o: appinterface.c ../include/App/appserver.h ../config.h
 appmessage.o: appmessage.c ../include/App/appmessage.h appmessage.h
 	$(CC) $(libApp_CFLAGS) -c appmessage.c
 
-appserver.o: appserver.c appinterface.h ../include/App/appserver.h lookup.h lookup.c ../config.h
+appserver.o: appserver.c appinterface.h ../include/App/appserver.h ../config.h
 	$(CC) $(libApp_CFLAGS) -c appserver.c
 
 apptransport.o: apptransport.c apptransport.h ../include/App/apptransport.h ../config.h
