Separated the marshaller from the AppInterface class

--- a/src/project.conf
+++ b/src/project.conf
@@ -5,11 +5,11 @@ cflags_force=-W -fPIC `pkg-config --cflags libSystem`
 cflags=-Wall -g -O2 -pedantic
 ldflags_force=`pkg-config --libs libSystem`
 ldflags=
-dist=Makefile,appinterface.h,appmessage.h,apptransport.h
+dist=Makefile,appinterface.h,appmessage.h,apptransport.h,marshall.h
 
 [libApp]
 type=library
-sources=appclient.c,appinterface.c,appmessage.c,appserver.c,apptransport.c
+sources=appclient.c,appinterface.c,appmessage.c,appserver.c,apptransport.c,marshall.c
 ldflags=-lsocket -lws2_32
 install=$(LIBDIR)
 
@@ -17,7 +17,7 @@ install=$(LIBDIR)
 depends=appinterface.h,../include/App/appclient.h
 
 [appinterface.c]
-depends=../include/App/appserver.h,../config.h
+depends=../include/App/appserver.h,marshall.h,../config.h
 
 [appmessage.c]
 depends=../include/App/appmessage.h,appmessage.h
@@ -30,3 +30,6 @@ depends=appinterface.h,../include/App/appserver.h,../config.h
 
 [apptransport.c]
 depends=apptransport.h,../include/App/apptransport.h,../config.h
+
+[marshall.c]
+depends=marshall.h
