--- a/src/Makefile
+++ b/src/Makefile
@@ -20,7 +20,7 @@ INSTALL	= install
 
 all: $(TARGETS)
 
-libApp_OBJS = appclient.o appinterface.o appmessage.o appserver.o apptransport.o
+libApp_OBJS = appclient.o appinterface.o appmessage.o appserver.o apptransport.o marshall.o
 libApp_CFLAGS = $(CPPFLAGSF) $(CPPFLAGS) $(CFLAGSF) $(CFLAGS)
 libApp_LDFLAGS = $(LDFLAGSF) $(LDFLAGS)  
 
@@ -36,7 +36,7 @@ libApp.so.0.0 libApp.so.0 libApp.so: $(libApp_OBJS)
 appclient.o: appclient.c appinterface.h ../include/App/appclient.h
 	$(CC) $(libApp_CFLAGS) -c appclient.c
 
-appinterface.o: appinterface.c ../include/App/appserver.h ../config.h
+appinterface.o: appinterface.c ../include/App/appserver.h marshall.h ../config.h
 	$(CC) $(libApp_CFLAGS) -c appinterface.c
 
 appmessage.o: appmessage.c ../include/App/appmessage.h appmessage.h
@@ -47,6 +47,9 @@ appserver.o: appserver.c appinterface.h ../include/App/appserver.h ../config.h
 
 apptransport.o: apptransport.c apptransport.h ../include/App/apptransport.h ../config.h
 	$(CC) $(libApp_CFLAGS) -c apptransport.c
+
+marshall.o: marshall.c marshall.h
+	$(CC) $(libApp_CFLAGS) -c marshall.c
 
 clean:
 	$(RM) -- $(libApp_OBJS)
