--- a/src/transport/project.conf
+++ b/src/transport/project.conf
@@ -4,7 +4,7 @@ cppflags=
 cflags_force=-W -fPIC `pkg-config --cflags libSystem`
 cflags=-Wall -g -O2 -pedantic
 ldflags_force=`pkg-config --libs libSystem` -L.. -lApp
-dist=Makefile,common.c
+dist=Makefile,common.h,common.c
 
 [tcp]
 type=plugin
@@ -12,7 +12,7 @@ sources=tcp.c
 install=$(LIBDIR)/App/transport
 
 [tcp.c]
-depends=common.c
+depends=common.h,common.c
 
 [tcp4]
 type=plugin
@@ -20,7 +20,7 @@ sources=tcp4.c
 install=$(LIBDIR)/App/transport
 
 [tcp4.c]
-depends=tcp.c,common.c
+depends=tcp.c,common.h,common.c
 
 [tcp6]
 type=plugin
@@ -28,7 +28,7 @@ sources=tcp6.c
 install=$(LIBDIR)/App/transport
 
 [tcp6.c]
-depends=tcp.c,common.c
+depends=tcp.c,common.h,common.c
 
 [template]
 type=plugin
@@ -40,7 +40,7 @@ sources=udp.c
 install=$(LIBDIR)/App/transport
 
 [udp.c]
-depends=common.c
+depends=common.h,common.c
 
 [udp4]
 type=plugin
@@ -48,7 +48,7 @@ sources=udp4.c
 install=$(LIBDIR)/App/transport
 
 [udp4.c]
-depends=udp.c,common.c
+depends=udp.c,common.h,common.c
 
 [udp6]
 type=plugin
@@ -56,4 +56,4 @@ sources=udp6.c
 install=$(LIBDIR)/App/transport
 
 [udp6.c]
-depends=udp.c,common.c
+depends=udp.c,common.h,common.c
