--- a/data/project.conf
+++ b/data/project.conf
@@ -1,5 +1,8 @@
 targets=libApp.pc
-dist=Makefile,libApp.pc.in,pkgconfig.sh
+dist=Makefile,Dummy.interface,appbroker.sh,libApp.pc.in,pkgconfig.sh
+
+[Dummy.interface]
+install=$(PREFIX)/etc/AppInterface
 
 [libApp.pc]
 type=script
