--- a/tests/project.conf
+++ b/tests/project.conf
@@ -1,10 +1,15 @@
-targets=appclient,appmessage,appserver,lookup,tests.log,transport
+targets=Dummy.h,appclient,appmessage,appserver,lookup,tests.log,transport
 cppflags_force=-I ../include
 cflags_force=-W `pkg-config --cflags libSystem`
 cflags=-Wall -g -O2
 ldflags_force=`pkg-config --libs libSystem` -lApp
 ldflags=-L../src -Wl,-rpath,../src
 dist=Makefile,tests.sh
+
+[Dummy.h]
+type=script
+script=../data/appbroker.sh
+depends=../data/Dummy.interface
 
 [appclient]
 type=binary
