Imported a couple manual pages

--- a/doc/Makefile
+++ b/doc/Makefile
@@ -1,5 +1,5 @@
 SUBDIRS	= gtkdoc
-TARGETS	= gtkdoc/libApp.types gtkdoc/tmpl.stamp gtkdoc/sgml.stamp gtkdoc/html.stamp
+TARGETS	= AppBroker.1 AppBroker.html AppClient.1 AppClient.html gtkdoc/libApp.types gtkdoc/tmpl.stamp gtkdoc/sgml.stamp gtkdoc/html.stamp
 PREFIX	= /usr/local
 DESTDIR	=
 RM	= rm -f
@@ -12,6 +12,18 @@ all: subdirs $(TARGETS)
 
 subdirs:
 	@for i in $(SUBDIRS); do (cd "$$i" && $(MAKE)) || exit; done
+
+AppBroker.1: AppBroker.xml
+	./docbook.sh -P "$(PREFIX)" -- "AppBroker.1"
+
+AppBroker.html: AppBroker.xml
+	./docbook.sh -P "$(PREFIX)" -- "AppBroker.html"
+
+AppClient.1: AppClient.xml
+	./docbook.sh -P "$(PREFIX)" -- "AppClient.1"
+
+AppClient.html: AppClient.xml
+	./docbook.sh -P "$(PREFIX)" -- "AppClient.html"
 
 gtkdoc/libApp.types:
 	./gtkdoc.sh -P "$(PREFIX)" -- "gtkdoc/libApp.types"
@@ -27,21 +39,25 @@ gtkdoc/html.stamp: gtkdoc/libApp-docs.xml gtkdoc/sgml.stamp gtkdoc/tmpl.stamp
 
 clean:
 	@for i in $(SUBDIRS); do (cd "$$i" && $(MAKE) clean) || exit; done
-	$(RM) -- $(gtkdoc/libApp.types_OBJS) $(gtkdoc/tmpl.stamp_OBJS) $(gtkdoc/sgml.stamp_OBJS) $(gtkdoc/html.stamp_OBJS)
+	$(RM) -- $(AppBroker.1_OBJS) $(AppBroker.html_OBJS) $(AppClient.1_OBJS) $(AppClient.html_OBJS) $(gtkdoc/libApp.types_OBJS) $(gtkdoc/tmpl.stamp_OBJS) $(gtkdoc/sgml.stamp_OBJS) $(gtkdoc/html.stamp_OBJS)
 	./gtkdoc.sh -c -P "$(PREFIX)" -- "gtkdoc/html.stamp"
 
 distclean:
 	@for i in $(SUBDIRS); do (cd "$$i" && $(MAKE) distclean) || exit; done
-	$(RM) -- $(gtkdoc/libApp.types_OBJS) $(gtkdoc/tmpl.stamp_OBJS) $(gtkdoc/sgml.stamp_OBJS) $(gtkdoc/html.stamp_OBJS)
+	$(RM) -- $(AppBroker.1_OBJS) $(AppBroker.html_OBJS) $(AppClient.1_OBJS) $(AppClient.html_OBJS) $(gtkdoc/libApp.types_OBJS) $(gtkdoc/tmpl.stamp_OBJS) $(gtkdoc/sgml.stamp_OBJS) $(gtkdoc/html.stamp_OBJS)
 	./gtkdoc.sh -c -P "$(PREFIX)" -- "gtkdoc/html.stamp"
 	$(RM) -- $(TARGETS)
 
 install: $(TARGETS)
 	@for i in $(SUBDIRS); do (cd "$$i" && $(MAKE) install) || exit; done
+	./docbook.sh -P "$(DESTDIR)$(PREFIX)" -i -- "AppBroker.1"
+	./docbook.sh -P "$(DESTDIR)$(PREFIX)" -i -- "AppBroker.html"
 	./gtkdoc.sh -P "$(DESTDIR)$(PREFIX)" -i -- "gtkdoc/html.stamp"
 
 uninstall:
 	@for i in $(SUBDIRS); do (cd "$$i" && $(MAKE) uninstall) || exit; done
+	./docbook.sh -P "$(DESTDIR)$(PREFIX)" -u -- "AppBroker.1"
+	./docbook.sh -P "$(DESTDIR)$(PREFIX)" -u -- "AppBroker.html"
 	./gtkdoc.sh -P "$(DESTDIR)$(PREFIX)" -u -- "gtkdoc/html.stamp"
 
 .PHONY: all subdirs clean distclean install uninstall
