--- a/doc/project.conf
+++ b/doc/project.conf
@@ -1,6 +1,30 @@
 subdirs=gtkdoc
-targets=gtkdoc/libApp.types,gtkdoc/tmpl.stamp,gtkdoc/sgml.stamp,gtkdoc/html.stamp
-dist=Makefile,gtkdoc.sh
+targets=AppBroker.1,AppBroker.html,AppClient.1,AppClient.html,gtkdoc/libApp.types,gtkdoc/tmpl.stamp,gtkdoc/sgml.stamp,gtkdoc/html.stamp
+dist=Makefile,AppBroker.xml,AppClient.xml,docbook.sh,gtkdoc.sh
+
+[AppBroker.1]
+type=script
+script=./docbook.sh
+depends=AppBroker.xml
+install=
+
+[AppBroker.html]
+type=script
+script=./docbook.sh
+depends=AppBroker.xml
+install=
+
+[AppClient.1]
+type=script
+script=./docbook.sh
+depends=AppClient.xml
+#install=
+
+[AppClient.html]
+type=script
+script=./docbook.sh
+depends=AppClient.xml
+#install=
 
 [gtkdoc/libApp.types]
 type=script
