Added the "includes" test (including all headers)

--- a/tests/project.conf
+++ b/tests/project.conf
@@ -1,4 +1,4 @@
-targets=Dummy.h,appclient,appmessage,appserver,lookup,tests.log,transport
+targets=Dummy.h,appclient,appmessage,appserver,includes,lookup,tests.log,transport
 cppflags_force=-I ../include
 cflags_force=-W `pkg-config --cflags libSystem`
 cflags=-Wall -g -O2
@@ -35,6 +35,10 @@ ldflags=../src/libApp.a
 [appserver.c]
 depends=../src/libApp.a
 
+[includes]
+type=binary
+sources=includes.c
+
 [lookup]
 type=binary
 sources=lookup.c
@@ -45,7 +49,7 @@ depends=../src/apptransport.h
 [tests.log]
 type=script
 script=./tests.sh
-depends=appclient,appmessage,appserver,lookup,tests.sh,transport,../src/transport/tcp.c,../src/transport/udp.c
+depends=appclient,appmessage,appserver,includes,lookup,tests.sh,transport,../src/transport/tcp.c,../src/transport/udp.c
 
 [transport]
 type=binary
