--- a/tests/Makefile
+++ b/tests/Makefile
@@ -1,4 +1,4 @@
-TARGETS	= Dummy.h appclient appmessage appserver lookup tests.log transport
+TARGETS	= Dummy.h appclient appmessage appserver includes lookup tests.log transport
 PREFIX	= /usr/local
 DESTDIR	=
 BINDIR	= $(PREFIX)/bin
@@ -42,6 +42,13 @@ appserver_LDFLAGS = $(LDFLAGSF) $(LDFLAGS) ../src/libApp.a
 appserver: $(appserver_OBJS)
 	$(CC) -o appserver $(appserver_OBJS) $(appserver_LDFLAGS)
 
+includes_OBJS = includes.o
+includes_CFLAGS = $(CPPFLAGSF) $(CPPFLAGS) $(CFLAGSF) $(CFLAGS)
+includes_LDFLAGS = $(LDFLAGSF) $(LDFLAGS)
+
+includes: $(includes_OBJS)
+	$(CC) -o includes $(includes_OBJS) $(includes_LDFLAGS)
+
 lookup_OBJS = lookup.o
 lookup_CFLAGS = $(CPPFLAGSF) $(CPPFLAGS) $(CFLAGSF) $(CFLAGS)
 lookup_LDFLAGS = $(LDFLAGSF) $(LDFLAGS)
@@ -49,7 +56,7 @@ lookup_LDFLAGS = $(LDFLAGSF) $(LDFLAGS)
 lookup: $(lookup_OBJS)
 	$(CC) -o lookup $(lookup_OBJS) $(lookup_LDFLAGS)
 
-tests.log: appclient appmessage appserver lookup tests.sh transport ../src/transport/tcp.c ../src/transport/udp.c
+tests.log: appclient appmessage appserver includes lookup tests.sh transport ../src/transport/tcp.c ../src/transport/udp.c
 	./tests.sh -P "$(PREFIX)" -- "tests.log"
 
 transport_OBJS = transport.o
@@ -68,6 +75,9 @@ appmessage.o: appmessage.c ../src/libApp.a
 appserver.o: appserver.c ../src/libApp.a
 	$(CC) $(appserver_CFLAGS) -c appserver.c
 
+includes.o: includes.c
+	$(CC) $(includes_CFLAGS) -c includes.c
+
 lookup.o: lookup.c ../src/apptransport.h
 	$(CC) $(lookup_CFLAGS) -c lookup.c
 
@@ -75,7 +85,7 @@ transport.o: transport.c ../src/libApp.a
 	$(CC) $(transport_CFLAGS) -c transport.c
 
 clean:
-	$(RM) -- $(Dummy.h_OBJS) $(appclient_OBJS) $(appmessage_OBJS) $(appserver_OBJS) $(lookup_OBJS) $(tests.log_OBJS) $(transport_OBJS)
+	$(RM) -- $(Dummy.h_OBJS) $(appclient_OBJS) $(appmessage_OBJS) $(appserver_OBJS) $(includes_OBJS) $(lookup_OBJS) $(tests.log_OBJS) $(transport_OBJS)
 
 distclean: clean
 	$(RM) -- $(TARGETS)
