--- a/doc/project.conf
+++ b/doc/project.conf
@@ -1,6 +1,6 @@
 subdirs=gtkdoc
 targets=AppBroker.1,AppBroker.html,AppClient.1,AppClient.html,gtkdoc/libApp.types,gtkdoc/tmpl.stamp,gtkdoc/sgml.stamp,gtkdoc/html.stamp
-dist=Makefile,AppBroker.xml,AppClient.xml,docbook.sh,gtkdoc.sh
+dist=Makefile,AppBroker.css.xml,AppBroker.xml,AppClient.css.xml,AppClient.xml,docbook.sh,gtkdoc.sh,manual.css.xml
 
 [AppBroker.1]
 type=script
@@ -11,7 +11,7 @@ install=
 [AppBroker.html]
 type=script
 script=./docbook.sh
-depends=AppBroker.xml
+depends=AppBroker.css.xml,AppBroker.xml,manual.css.xml
 install=
 
 [AppClient.1]
@@ -23,7 +23,7 @@ depends=AppClient.xml
 [AppClient.html]
 type=script
 script=./docbook.sh
-depends=AppClient.xml
+depends=AppClient.css.xml,AppClient.xml,manual.css.xml
 #install=
 
 [gtkdoc/libApp.types]
