Added an example in the manual page

--- a/tools/project.conf
+++ b/tools/project.conf
@@ -5,7 +5,7 @@ cflags_force=-W `pkg-config --cflags libSystem`
 cflags=-Wall -g -O2 -pedantic
 ldflags_force=-L../src `pkg-config --libs libSystem` -lApp
 ldflags=-L$(PREFIX)/lib -Wl,-rpath,$(PREFIX)/lib
-dist=Makefile,README
+dist=Makefile
 
 [AppBroker]
 type=binary
