Build the network transport plug-ins with libsocket

--- a/src/transport/project.conf
+++ b/src/transport/project.conf
@@ -9,6 +9,7 @@ dist=Makefile,common.h,common.c
 [tcp]
 type=plugin
 sources=tcp.c
+ldflags=-lsocket
 install=$(LIBDIR)/App/transport
 
 [tcp.c]
@@ -17,6 +18,7 @@ depends=common.h,common.c
 [tcp4]
 type=plugin
 sources=tcp4.c
+ldflags=-lsocket
 install=$(LIBDIR)/App/transport
 
 [tcp4.c]
@@ -25,6 +27,7 @@ depends=tcp.c,common.h,common.c
 [tcp6]
 type=plugin
 sources=tcp6.c
+ldflags=-lsocket
 install=$(LIBDIR)/App/transport
 
 [tcp6.c]
@@ -37,6 +40,7 @@ sources=template.c
 [udp]
 type=plugin
 sources=udp.c
+ldflags=-lsocket
 install=$(LIBDIR)/App/transport
 
 [udp.c]
@@ -45,6 +49,7 @@ depends=common.h,common.c
 [udp4]
 type=plugin
 sources=udp4.c
+ldflags=-lsocket
 install=$(LIBDIR)/App/transport
 
 [udp4.c]
@@ -53,6 +58,7 @@ depends=udp.c,common.h,common.c
 [udp6]
 type=plugin
 sources=udp6.c
+ldflags=-lsocket
 install=$(LIBDIR)/App/transport
 
 [udp6.c]
