--- a/src/transport/project.conf
+++ b/src/transport/project.conf
@@ -1,10 +1,16 @@
-targets=tcp,tcp4,tcp6,template,udp,udp4,udp6
+targets=self,tcp,tcp4,tcp6,template,udp,udp4,udp6
 cppflags_force=-I ../../include
 cppflags=
 cflags_force=-W -fPIC `pkg-config --cflags libSystem`
 cflags=-Wall -g -O2 -pedantic
 ldflags_force=`pkg-config --libs libSystem` -L.. -lApp
 dist=Makefile,common.h,common.c
+
+[self]
+type=plugin
+sources=self.c
+ldflags=-ldl
+#install=$(LIBDIR)/App/transport
 
 [tcp]
 type=plugin
